[package]
name = "team-ringrostig"
version = "0.1.0"
authors = ["Jonatan Tegen <jonatan.tegen@getaccept.com", "Christoffer Flystam <christoffer.flystam@getaccept.com>"]

[dependencies]
actix-web = "1.0.0"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
env_logger = "0.6"
futures = "0.1"
juniper = "0.13.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"